# EleksCoolLogger

./: CMakeLists.txt
src/: main.cpp
src/liblogger/: CMakeLists.txt  cool_logger.cpp  cool_logger.h
